# shrugbot

./: LICENSE  README.md  pyproject.toml  requirements.txt  shrugbot.py
