[project]
name = "shrugbot"
version = "0.1.0"
description = "Shrug Bot for Telegram"
authors = [
  { name = "nyuszika7h", email = "nyuszika7h@gmail.com" },
]
license = { text = "MIT" }
requires-python = "~= 3.6"
dependencies = [
  "python-telegram-bot ~= 13.7",
  "toml ~= 0.10.2",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
